
apply plugin: 'java'
apply plugin: 'com.github.johnrengelman.shadow'
group 'cc.sfclub.polar'
version '1.0-SNAPSHOT'

jar.enabled = false
assemble.dependsOn(shadowJar)

sourceCompatibility = 1.8
repositories {
    mavenCentral()
}
buildscript {
    repositories {
        jcenter()
    }
    dependencies {
        classpath "com.github.jengelman.gradle.plugins:shadow:5.1.0"
    }
}
shadowJar {
    zip64 true
    manifest {
        attributes 'Main-Class': 'cc.sfclub.polar.Core'
    }
}
dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    implementation 'org.greenrobot:eventbus:3.2.0'
    compileOnly 'org.projectlombok:lombok:1.18.12'
    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
    compile group: 'com.alibaba', name: 'druid', version: '1.1.21'
    compile 'org.slf4j:slf4j-api:1.7.30'
    compile group: 'ch.qos.logback', name: 'logback-core', version: '1.2.3'
    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
    compile group: 'org.nutz', name: 'nutz', version: '1.r.68.v20200309'
    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.19'
    compile 'org.reflections:reflections:0.9.12'
    annotationProcessor 'org.projectlombok:lombok:1.18.12'
}